--- a/.github/workflows/test_pypi_package.yml
+++ b/.github/workflows/test_pypi_package.yml
@@ -115,7 +115,7 @@ jobs:
     - name: Install lapkt from pypi pytest
       run: |
         py -m pip install --upgrade pip
-        py -m pip install --user lapkt
+        py -m pip install --user lapkt pytest
 
     - name: Test lapkt installation
       run: |
@@ -173,6 +173,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        exclude:
+          - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
