--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,6 +266,13 @@ add_subdirectory(config/cmake/DoxygenSphinxDocs)
 #---- DECLARE library targets and set properties ----#
 
 #---- core - pure cxx component ----#
+if(LINUX_BUILD)
+  set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};$ORIGIN")
+# elseif(WINDOWS_BUILD)
+#   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};$ORIGIN")
+elseif(MACOS_BUILD)
+  set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};@loader_path")
+endif()
 
 add_library(core SHARED)
 
@@ -281,7 +288,6 @@ pybind11_add_module(wrapper SHARED)
 # add_library(wrapper SHARED)
 set_target_properties(wrapper PROPERTIES
   PREFIX ""
-  INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
 )
 
 # target_include_directories(wrapper PRIVATE
@@ -298,7 +304,6 @@ pybind11_add_module(pddl SHARED)
 # add_library(pddl SHARED)
 set_target_properties(pddl PROPERTIES
   PREFIX ""
-  INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
 )
 target_link_libraries(pddl PRIVATE
   core
@@ -313,7 +318,6 @@ pybind11_add_module(planner SHARED)
 # add_library(planner SHARED)
 set_target_properties(planner PROPERTIES
   PREFIX ""
-  INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
 )
 target_link_libraries(planner PRIVATE
   core
