Setting up pypi testing for latest package uploaded on pypi

--- a/.github/workflows/test_testpypi_package.yml
+++ b/.github/workflows/test_testpypi_package.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Test_pypi_package
+name: Test_TestPypi_Package
 
 on:   
   workflow_dispatch:
