--- a/.github/workflows/test_testpypi_package.yml
+++ b/.github/workflows/test_testpypi_package.yml
@@ -19,116 +19,116 @@ jobs:
 
 # --------------------------------------------------------------------------- #
 
-  build-ubuntu-20:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#   build-ubuntu-20:
+#     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+#     # You can convert this to a matrix build if you need cross-platform coverage.
+#     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+#     runs-on: ubuntu-20.04
+#     strategy:
+#       matrix:
+#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
 
-    steps:
-    - uses: actions/checkout@v2
+#     steps:
+#     - uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.py_version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: "${{ matrix.py_version }}"
+#     - name: Set up Python ${{ matrix.py_version }}
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: "${{ matrix.py_version }}"
 
-    - name: Print GLIBC version
-      run: ldd --version
+#     - name: Print GLIBC version
+#       run: ldd --version
 
-    - name: Install lapkt from pypi
-      run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
-        python3 -m pip install --user -i https://test.pypi.org/simple/ lapkt
+#     - name: Install lapkt from pypi
+#       run: |
+#         python3 -m pip install --upgrade pip
+#         python3 -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
+#         python3 -m pip install --user -i https://test.pypi.org/simple/ lapkt
 
-    - name: Find path to lapkt
-      run: which lapkt_cmd.py
+#     - name: Find path to lapkt
+#       run: which lapkt_cmd.py
 
-    - name: Test lapkt installation
-      run: |
-        lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
-        cat plan.ipc
+#     - name: Test lapkt installation
+#       run: |
+#         lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
+#         cat plan.ipc
 
-    - name: Pytest
-      working-directory: ${{github.workspace}}
-      run: |
-        pytest
+#     - name: Pytest
+#       working-directory: ${{github.workspace}}
+#       run: |
+#         pytest
 
-# --------------------------------------------------------------------------- #
+# # --------------------------------------------------------------------------- #
 
-  build-ubuntu-18:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#   build-ubuntu-18:
+#     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+#     # You can convert this to a matrix build if you need cross-platform coverage.
+#     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+#     runs-on: ubuntu-18.04
+#     strategy:
+#       matrix:
+#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
 
-    steps:
-    - uses: actions/checkout@v2
+#     steps:
+#     - uses: actions/checkout@v2
   
-    - name: Set up Python ${{ matrix.py_version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: "${{ matrix.py_version }}"
+#     - name: Set up Python ${{ matrix.py_version }}
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: "${{ matrix.py_version }}"
 
-    - name: Install lapkt from pypi
-      run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
-        python3 -m pip install --user -i https://test.pypi.org/simple/ lapkt
+#     - name: Install lapkt from pypi
+#       run: |
+#         python3 -m pip install --upgrade pip
+#         python3 -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
+#         python3 -m pip install --user -i https://test.pypi.org/simple/ lapkt
 
-    - name: Test lapkt installation
-      run: |
-        lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
-        cat plan.ipc
+#     - name: Test lapkt installation
+#       run: |
+#         lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
+#         cat plan.ipc
 
-    - name: Pytest
-      working-directory: ${{github.workspace}}
-      run: |
-        pytest
+#     - name: Pytest
+#       working-directory: ${{github.workspace}}
+#       run: |
+#         pytest
 
-# --------------------------------------------------------------------------- #
+# # --------------------------------------------------------------------------- #
 
-  build-windows-2019:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: windows-2019
-    strategy:
-      matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.6"
+#   build-windows-2019:
+#     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+#     # You can convert this to a matrix build if you need cross-platform coverage.
+#     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+#     runs-on: windows-2019
+#     strategy:
+#       matrix:
+#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         exclude:
+#           - py_version: "3.6"
 
-    steps:
-    - uses: actions/checkout@v2
+#     steps:
+#     - uses: actions/checkout@v2
       
-    - name: Set up Python ${{ matrix.py_version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: "${{ matrix.py_version }}"
+#     - name: Set up Python ${{ matrix.py_version }}
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: "${{ matrix.py_version }}"
 
-    - name: Install lapkt from pypi pytest
-      run: |
-        py -m pip install --upgrade pip
-        py -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
-        py -m pip install --user -i https://test.pypi.org/simple/ lapkt
+#     - name: Install lapkt from pypi pytest
+#       run: |
+#         py -m pip install --upgrade pip
+#         py -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
+#         py -m pip install --user -i https://test.pypi.org/simple/ lapkt
 
-    - name: Test lapkt installation
-      run: |
-        py c:\\users\\runneradmin\\appdata\\roaming\\python\\python310\\scripts\\lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
-        cat plan.ipc
+#     - name: Test lapkt installation
+#       run: |
+#         py c:\\users\\runneradmin\\appdata\\roaming\\python\\python310\\scripts\\lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
+#         cat plan.ipc
 
-    - name: Pytest
-      working-directory: ${{github.workspace}}
-      run: |
-        py -m pytest
+#     - name: Pytest
+#       working-directory: ${{github.workspace}}
+#       run: |
+#         py -m pytest
 
 # --------------------------------------------------------------------------- #
 
@@ -170,37 +170,37 @@ jobs:
 
 # --------------------------------------------------------------------------- #
 
-  build-macos-10_15:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: macos-10.15
-    strategy:
-      matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.8"
+  # build-macos-10_15:
+  #   # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+  #   # You can convert this to a matrix build if you need cross-platform coverage.
+  #   # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
+  #   runs-on: macos-10.15
+  #   strategy:
+  #     matrix:
+  #       py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  #       exclude:
+  #         - py_version: "3.8"
 
-    steps:
-    - uses: actions/checkout@v2
+  #   steps:
+  #   - uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.py_version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: "${{ matrix.py_version }}"
+  #   - name: Set up Python ${{ matrix.py_version }}
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: "${{ matrix.py_version }}"
 
-    - name: Install lapkt from pypi
-      run: |
-        python3 -m pip install --upgrade pip
-        python3 -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
-        python3 -m pip install --user -i https://test.pypi.org/simple/ lapkt
+  #   - name: Install lapkt from pypi
+  #     run: |
+  #       python3 -m pip install --upgrade pip
+  #       python3 -m pip install --user pytest tarski-lapkt clingo ruamel.yaml
+  #       python3 -m pip install --user -i https://test.pypi.org/simple/ lapkt
 
-    - name: Test lapkt installation
-      run: |
-        python3 /Users/runner/.local/bin/lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
-        cat plan.ipc
+  #   - name: Test lapkt installation
+  #     run: |
+  #       python3 /Users/runner/.local/bin/lapkt_cmd.py BFWS -d ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/domain.pddl -p ${{github.workspace}}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl
+  #       cat plan.ipc
 
-    - name: Pytest
-      working-directory: ${{github.workspace}}
-      run: |
-        pytest
+  #   - name: Pytest
+  #     working-directory: ${{github.workspace}}
+  #     run: |
+  #       pytest
