--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -586,12 +586,12 @@ jobs:
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     needs:
-    - build-windows-2019
-    - build-macos-10_15
-    - build-macos-11-M1
+    # - build-windows-2019
+    # - build-macos-10_15
+    # - build-macos-11-M1
     - build-macos-11
-    - build-ubuntu-18
-    - build-ubuntu-20
+    # - build-ubuntu-18
+    # - build-ubuntu-20
 
     runs-on: ubuntu-latest
 
