--- a/.github/workflows/test_testpypi_package.yml
+++ b/.github/workflows/test_testpypi_package.yml
@@ -140,8 +140,8 @@ jobs:
     strategy:
       matrix:
         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.8"
+        # exclude:
+        #   - py_version: "3.8"
 
     steps:
     - uses: actions/checkout@v2
@@ -178,8 +178,8 @@ jobs:
   #   strategy:
   #     matrix:
   #       py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-  #       exclude:
-  #         - py_version: "3.8"
+  #       # exclude:
+  #       #   - py_version: "3.8"
 
   #   steps:
   #   - uses: actions/checkout@v2
