--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -273,8 +273,11 @@ elseif(WINDOWS_BUILD)
 elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
   set(CMAKE_MACOSX_RPATH ON)
+  set(CMAKE_INSTALL_NAME_DIR @executable_path)
   set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-  set(CMAKE_INSTALL_RPATH "@executable_path;@loader_path")
+  # set(CMAKE_INSTALL_RPATH "@executable_path;@loader_path")
+  # set(CMAKE_INSTALL_RPATH "@executable_path")
+  # set(CMAKE_INSTALL_RPATH "@loader_path")
 endif()
 
 add_library(core SHARED)
