--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,7 +274,7 @@ elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
   set(CMAKE_MACOSX_RPATH ON)
   # set(CMAKE_INSTALL_NAME_DIR @executable_path)
-  set(CMAKE_INSTALL_NAME_DIR "@executable_path/../../;@loader_path")
+  set(CMAKE_INSTALL_NAME_DIR "@executable_path/../../")
   set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
   # set(CMAKE_INSTALL_RPATH "@executable_path;@loader_path")
   # set(CMAKE_INSTALL_RPATH @executable_path)
