--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,7 +272,7 @@ elseif(WINDOWS_BUILD)
   # set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};$ORIGIN")
 elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
-  set(CMAKE_MACOSX_RPATH ON)
+  # set(CMAKE_MACOSX_RPATH ON)
   # set(CMAKE_INSTALL_NAME_DIR @executable_path)
   set(CMAKE_INSTALL_NAME_DIR "@executable_path/../../")
   set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
