--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,10 +272,11 @@ elseif(WINDOWS_BUILD)
   # set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};$ORIGIN")
 elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
+  set(CMAKE_SKIP_RPATH TRUE)
   # set(CMAKE_MACOSX_RPATH ON)
   # set(CMAKE_INSTALL_NAME_DIR @executable_path)
-  set(CMAKE_INSTALL_NAME_DIR "@executable_path/../../")
-  set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+  # set(CMAKE_INSTALL_NAME_DIR "@executable_path/../../")
+  # set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
   # set(CMAKE_INSTALL_RPATH "@executable_path;@loader_path")
   # set(CMAKE_INSTALL_RPATH @executable_path)
   # set(CMAKE_INSTALL_RPATH @loader_path)
