CMAKE_SKIP_RPATH TRUE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,14 +272,19 @@ elseif(WINDOWS_BUILD)
   # set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};$ORIGIN")
 elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
-  # set(CMAKE_SKIP_RPATH TRUE)
-  message(STATUS "version 0.1")
-  # set(CMAKE_MACOSX_RPATH ON)
+  message(STATUS "CMAKE_SKIP_RPATH TRUE")
+  set(CMAKE_SKIP_RPATH TRUE)
+  # message(STATUS "CMAKE_MACOS_RPATH TRUE")
+  # set(CMAKE_MACOSX_RPATH TRUE)
+  # message(STATUS "CMAKE_INSTALL_NAME_DIR @executable_path")
   # set(CMAKE_INSTALL_NAME_DIR @executable_path)
+  # message(STATUS "CMAKE_INSTALL_NAME_DIR @loader_path")
   # set(CMAKE_INSTALL_NAME_DIR @loader_path)
+  # message(STATUS "CMAKE_BUILD_WITH_INSTALL_RPATH TRUE")
   # set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-  # set(CMAKE_INSTALL_RPATH "@executable_path;@loader_path")
+  # message(STATUS "CMAKE_INSTALL_RPATH @executable_path")
   # set(CMAKE_INSTALL_RPATH @executable_path)
+  # message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
   # set(CMAKE_INSTALL_RPATH @loader_path)
 endif()
 
