CMAKE_INSTALL_RPATH @loader_path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,8 +272,8 @@ elseif(WINDOWS_BUILD)
   # set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH};$ORIGIN")
 elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
-  message(STATUS "CMAKE_SKIP_RPATH TRUE")
-  set(CMAKE_SKIP_RPATH TRUE)
+  # message(STATUS "CMAKE_SKIP_RPATH TRUE")
+  # set(CMAKE_SKIP_RPATH TRUE)
   # message(STATUS "CMAKE_MACOS_RPATH TRUE")
   # set(CMAKE_MACOSX_RPATH TRUE)
   # message(STATUS "CMAKE_INSTALL_NAME_DIR @executable_path")
@@ -284,8 +284,8 @@ elseif(MACOS_BUILD)
   # set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
   # message(STATUS "CMAKE_INSTALL_RPATH @executable_path")
   # set(CMAKE_INSTALL_RPATH @executable_path)
-  # message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
-  # set(CMAKE_INSTALL_RPATH @loader_path)
+  message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
+  set(CMAKE_INSTALL_RPATH @loader_path)
 endif()
 
 add_library(core SHARED)
