--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,8 +274,8 @@ elseif(MACOS_BUILD)
   message(STATUS "Setting up RPATH on macos build")
   # message(STATUS "CMAKE_SKIP_RPATH TRUE")
   # set(CMAKE_SKIP_RPATH TRUE)
-  # message(STATUS "CMAKE_MACOS_RPATH TRUE")
-  # set(CMAKE_MACOSX_RPATH TRUE)
+  message(STATUS "CMAKE_MACOS_RPATH TRUE")
+  set(CMAKE_MACOSX_RPATH TRUE)
   # message(STATUS "CMAKE_INSTALL_NAME_DIR @executable_path")
   # set(CMAKE_INSTALL_NAME_DIR @executable_path)
   # message(STATUS "CMAKE_INSTALL_NAME_DIR @loader_path")
