CMAKE_MACOS_RPATH TRUE; CMAKE_INSTALL_RPATH @loader_path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,10 +282,10 @@ elseif(MACOS_BUILD)
   # set(CMAKE_INSTALL_NAME_DIR @loader_path)
   # message(STATUS "CMAKE_BUILD_WITH_INSTALL_RPATH TRUE")
   # set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-  message(STATUS "CMAKE_INSTALL_RPATH @executable_path")
-  set(CMAKE_INSTALL_RPATH @executable_path)
-  # message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
-  # set(CMAKE_INSTALL_RPATH @loader_path)
+  # message(STATUS "CMAKE_INSTALL_RPATH @executable_path")
+  # set(CMAKE_INSTALL_RPATH @executable_path)
+  message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
+  set(CMAKE_INSTALL_RPATH @loader_path)
 endif()
 
 add_library(core SHARED)
