CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE; CMAKE_INSTALL_RPATH @loader_path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -284,8 +284,8 @@ elseif(MACOS_BUILD)
   # set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
   # message(STATUS "CMAKE_INSTALL_RPATH @executable_path")
   # set(CMAKE_INSTALL_RPATH @executable_path)
-  # message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
-  # set(CMAKE_INSTALL_RPATH @loader_path)
+  message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
+  set(CMAKE_INSTALL_RPATH @loader_path)
   message(STATUS "CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE")
   set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
