--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,14 +278,14 @@ elseif(MACOS_BUILD)
   # set(CMAKE_MACOSX_RPATH TRUE)
   # message(STATUS "CMAKE_INSTALL_NAME_DIR @executable_path")
   # set(CMAKE_INSTALL_NAME_DIR @executable_path)
-  # message(STATUS "CMAKE_INSTALL_NAME_DIR @loader_path")
-  # set(CMAKE_INSTALL_NAME_DIR @loader_path)
+  message(STATUS "CMAKE_INSTALL_NAME_DIR @loader_path")
+  set(CMAKE_INSTALL_NAME_DIR @loader_path)
   # message(STATUS "CMAKE_BUILD_WITH_INSTALL_RPATH TRUE")
   # set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
   # message(STATUS "CMAKE_INSTALL_RPATH @executable_path")
   # set(CMAKE_INSTALL_RPATH @executable_path)
-  message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
-  set(CMAKE_INSTALL_RPATH @loader_path)
+  # message(STATUS "CMAKE_INSTALL_RPATH @loader_path")
+  # set(CMAKE_INSTALL_RPATH @loader_path)
   # message(STATUS "CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE")
   # set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
