H_Add_Callback python interface for LAPKT4EDU

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -19,6 +19,7 @@ install(DIRECTORY
 
 install(FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/debug.py
+    ${CMAKE_CURRENT_SOURCE_DIR}/h_add_test.py
     PERMISSIONS OWNER_WRITE OWNER_READ
     DESTINATION ${CMAKE_SOURCE_DIR}/debug_install
     COMPONENT PYPACKAGE EXCLUDE_FROM_ALL 
