--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -225,9 +225,9 @@ jobs:
 
     - name: Install pip dependencies
       run: |
-        py -m pip install --upgrade pip
-        py -m pip install flake8 pytest
-        py -m pip install --upgrade build wheel twine
+        python -m pip install --upgrade pip
+        python -m pip install flake8 pytest
+        python -m pip install --upgrade build wheel twine
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -256,7 +256,7 @@ jobs:
         cmake --build ${{github.workspace}}/build
 
     - name: Install Python Package
-      run: py -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
+      run: python -m pip install ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
 
     - name: CTest
       working-directory: ${{github.workspace}}/build
@@ -275,12 +275,12 @@ jobs:
     - name: Build Pypi Python Package
       run: |
         cd ${{github.workspace}}/${{env.BUILD_TYPE}}/_package
-        py setup.py bdist_wheel --python-tag=cp${{ steps.split.outputs._0 }}${{ steps.split.outputs._1 }} --plat-name=win_amd64
+        python setup.py bdist_wheel --python-tag=cp${{ steps.split.outputs._0 }}${{ steps.split.outputs._1 }} --plat-name=win_amd64
 
     - name: Pytest
       working-directory: ${{github.workspace}}
       run: |
-        py -m pytest
+        python -m pytest
 
     - name: Store the binary wheel
       uses: actions/upload-artifact@v2
