--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,8 +73,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
+            // "macos"
+            "program": "/usr/local/bin/python3",
             // "Ubuntu"
-            "program": "/usr/bin/python3",
+            // "program": "/usr/bin/python3",
             // "Windows with Python 3.10", "Set HOME in Environment variables manually"
             // "program": ${env:HOME}\\AppData\\Local\\Programs\\Python\\Python310\\python",
             "args": [
@@ -105,9 +107,10 @@
                 // "${workspaceFolder}/test/classical_instance_small/cavediving/testing01.pddl", 
                 "${workspaceFolder}/test/classical_instance_small/gripper/prob01.pddl", 
                 // "${workspaceFolder}/test/classical_instance_small/hiking-opt14-strips/ptesting-1-2-3.pddl", 
-                "--wait_debug"],
+                // "--wait_debug"
+            ],
             "stopAtEntry": false,
-            "MIMode": "gdb",
+            "MIMode": "lldb",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -116,6 +119,61 @@
                 }
             ],
             "cwd": "${workspaceFolder}",
-        }
+        },
+        // lldb(launch) - Launch python with lldb attached to it.
+        // Handy to debug the C++ code.
+        // Can't be used to debug the python code.
+        { 
+            "name": "(lldb) Launch",
+            "type": "lldb",
+            "request": "launch",
+            // "macos"
+            "program": "/usr/local/bin/python3",
+            // "Ubuntu"
+            // "program": "/usr/bin/python3",
+            // "Windows with Python 3.10", "Set HOME in Environment variables manually"
+            // "program": ${env:HOME}\\AppData\\Local\\Programs\\Python\\Python310\\python",
+            "args": [
+                "${workspaceFolder}/debug_install/debug.py",
+                // "AT_LAPKT_Planner", 
+                "BFWS",
+                // "AT_BFS_f_Planner",
+                // "BFS_f_Planner",
+                // "BRFS_Planner",
+                // "DFIW_Planner",
+                // "DFSIW_Planner",
+                // "DFS_Plus_Planner",
+                // "IW_Planner",
+                // "RPIW_Planner",
+                // "SIW_PLUS_BFS_F_Planner",
+                // "SIW_Planner",
+                // "SIW_Plus_Planner",
+                "--lapkt_instance_generator", "Tarski",
+                // "--lapkt_instance_generator", "FD",
+                // "--lapkt_instance_generator", "FF",
+                "-d", 
+                // "${workspaceFolder}/test/classical_instance_small/visitall-opt11-strips/domain.pddl", 
+                // "${workspaceFolder}/test/classical_instance_small/cavediving/domain.pddl", 
+                "${workspaceFolder}/test/classical_instance_small/gripper/domain.pddl", 
+                // "${workspaceFolder}/test/classical_instance_small/hiking-opt14-strips/domain.pddl", 
+                "-p", 
+                // "${workspaceFolder}/test/classical_instance_small/visitall-opt11-strips/problem02-full.pddl", 
+                // "${workspaceFolder}/test/classical_instance_small/cavediving/testing01.pddl", 
+                "${workspaceFolder}/test/classical_instance_small/gripper/prob01.pddl", 
+                // "${workspaceFolder}/test/classical_instance_small/hiking-opt14-strips/ptesting-1-2-3.pddl", 
+                // "--wait_debug"
+            ],
+            // "stopAtEntry": false,
+            // "MIMode": "lldb",
+            // "setupCommands": [
+            //     {
+            //         "description": "Enable pretty-printing for gdb",
+            //         "text": "-enable-pretty-printing",
+            //         "ignoreFailures": true
+            //     }
+            // ],
+            "cwd": "${workspaceFolder}",
+        },
+        
     ]
 }
