--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": true,
     "cmake.configureArgs": [
+        "-DCMAKE_GENERATOR='Unix Makefiles'",
         "-DUSE_SUPERBUILD=ON",
         "-DCMAKE_FF_CXX=OFF",
         "-DCMAKE_LEGACY_PLANNER=OFF",
@@ -13,7 +14,7 @@
         "-DCMAKE_DOXYGEN_FLAT_THEME=OFF",
         "-DCMAKE_DOXYGEN_AWESOME_THEME=OFF",
         "-DCMAKE_SPHINX_DOCS=OFF",
-        "-DCMAKE_STATIC_BOOST=OFF",
+        "-DCMAKE_STATIC_BOOST=ON",
         "-DCMAKE_TESTING_ENABLED=ON",
         // "-DPY_VERSION=3.9"
     ],
