--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
+        py_version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -119,7 +119,7 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
+        py_version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -214,7 +214,7 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
+        py_version: ["3.8", "3.9", "3.10"]
         # exclude:
         #   - py_version: "3.6"
 
@@ -400,7 +400,7 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
+        py_version: ["3.8", "3.9", "3.10"]
 
 
     steps:
@@ -493,7 +493,7 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
+        py_version: ["3.8", "3.9", "3.10"]
 
 
     steps:
@@ -585,7 +585,7 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.10"]
+        py_version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
