testing macos build

--- a/src/planner/pybinding/CMakeLists.txt
+++ b/src/planner/pybinding/CMakeLists.txt
@@ -2,9 +2,15 @@
 # pybind11_add_module(planner pybind11_module.cxx)
 target_sources(planner PRIVATE pybind11_module.cxx)
 # target_link_libraries(planner PUBLIC planner)
-set_target_properties(planner PROPERTIES
-    INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
-)
+if(MACOS_BUILD)
+    set_target_properties(planner PROPERTIES
+        INSTALL_RPATH "/usr/local/Frameworks/"
+    )
+else()
+    set_target_properties(planner PROPERTIES
+        INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
+    )
+endif()
 # planner
 # install(TARGETS planner
 #     EXPORT lapkt-planner-Targets
