--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,13 +149,21 @@ endfunction()
 #         "INCOMPATIBLE PYTHON VERSION, expected 3.6.x < 3.9.x but found - " 
 #         ${Python_VERSION})
 # endif()
+if(MACOS_BUILD)
+  set(Python_FIND_FRAMEWORK "FIRST")
+  set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
+  # set(ENV{DYLD_FRAMEWORK_PATH} "/Applications/Xcode_14.0.1.app/Contents/Developer/Library/Frameworks")
+endif(MACOS_BUILD)
 if(NOT DEFINED PY_VERSION)
   find_package(Python COMPONENTS Interpreter Development)
 else()
   string(REPLACE "." ";" PY_VERSION_PART ${PY_VERSION})
   LIST(GET PY_VERSION_PART 0 PY_VMAJOR)
   LIST(GET PY_VERSION_PART 1 PY_VMINOR)
-  find_package(Python ${PY_VMAJOR}...<${PY_VMINOR} COMPONENTS Interpreter Development)
+  MATH(EXPR PY_VMINOR_NEXT "${PY_VMINOR} + 1")
+  # find_package(Python ${PY_VMAJOR}...<${PY_VMINOR} COMPONENTS Interpreter Development)
+  find_package(Python ${PY_VMAJOR}.${PY_VMINOR}...<${PY_VMAJOR}.${PY_VMINOR_NEXT} 
+    COMPONENTS Interpreter Development)
 endif()
 # if(${Python_VERSION} VERSION_LESS 3.6.0)
 #   message(SEND_ERROR 
