--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,8 +150,8 @@ endfunction()
 #         ${Python_VERSION})
 # endif()
 if(MACOS_BUILD)
-  set(Python_FIND_FRAMEWORK "FIRST")
-  set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
+  set(Python_FIND_FRAMEWORK "LAST")
+  # set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
   # set(ENV{DYLD_FRAMEWORK_PATH} "/Applications/Xcode_14.0.1.app/Contents/Developer/Library/Frameworks")
 endif(MACOS_BUILD)
 if(NOT DEFINED PY_VERSION)
