--- a/config/cmake/SuperBuildLinux/CMakeLists.txt
+++ b/config/cmake/SuperBuildLinux/CMakeLists.txt
@@ -5,8 +5,8 @@
 
 # Fetch Python Exec
 if(MACOS_BUILD)
-  set(Python_FIND_FRAMEWORK "FIRST")
-  set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
+  set(Python_FIND_FRAMEWORK "LAST")
+  # set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
   # set(ENV{DYLD_FRAMEWORK_PATH} "/Applications/Xcode_14.0.1.app/Contents/Developer/Library/Frameworks")
 endif(MACOS_BUILD)
 
