--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -304,9 +304,10 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.9", "3.10"]
-        # exclude:
-        #   - py_version: "3.8"
+        py_version: ["3.8", "3.9", "3.10"]
+        # py_version: ["3.9", "3.10"]
+        exclude:
+          - py_version: "3.9"
 
     steps:
     - uses: actions/checkout@v3
@@ -503,9 +504,10 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.9", "3.10"]
-        # exclude:
-        #   - py_version: "3.8"
+        py_version: ["3.8", "3.9", "3.10"]
+        # py_version: ["3.9", "3.10"]
+        exclude:
+          - py_version: "3.9"
 
     steps:
     - uses: actions/checkout@v3
@@ -602,9 +604,10 @@ jobs:
     strategy:
       matrix:
         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        py_version: ["3.9", "3.10"]
-        # exclude:
-        #   - py_version: "3.8"
+        py_version: ["3.8", "3.9", "3.10"]
+        # py_version: ["3.9", "3.10"]
+        exclude:
+          - py_version: "3.9"
 
     steps:
     - uses: actions/checkout@v3
