test pypi macos - 0.1.7 Force Framework path for find_python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,11 +149,11 @@ endfunction()
 #         "INCOMPATIBLE PYTHON VERSION, expected 3.6.x < 3.9.x but found - " 
 #         ${Python_VERSION})
 # endif()
-# if(MACOS_BUILD)
-  # set(Python_FIND_FRAMEWORK "LAST")
-  # set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
+if(MACOS_BUILD)
+  set(Python_FIND_FRAMEWORK "FIRST")
+  set(ENV{DYLD_FRAMEWORK_PATH} "/usr/local/Frameworks/")
   # set(ENV{DYLD_FRAMEWORK_PATH} "/Applications/Xcode_14.0.1.app/Contents/Developer/Library/Frameworks")
-# endif(MACOS_BUILD)
+endif(MACOS_BUILD)
 if(NOT DEFINED PY_VERSION)
   find_package(Python COMPONENTS Interpreter Development)
 else()
