--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -309,8 +309,8 @@ add_library(core SHARED)
 #---- Python extensions ----#
 
 #---- CXX Wrappers over LAPKT lib ----#
-pybind11_add_module(wrapper SHARED)
-# add_library(wrapper SHARED)
+# pybind11_add_module(wrapper SHARED)
+add_library(wrapper SHARED)
 set_target_properties(wrapper PROPERTIES
   PREFIX ""
   INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN" # CHECK THIS FOR MACOS
@@ -323,12 +323,18 @@ set_target_properties(wrapper PROPERTIES
 target_link_libraries(wrapper PUBLIC
   core
   ${Boost_LIBRARIES}
-  # pybind11::headers
+  pybind11::pybind11
 )
 
+if(WINDOWS_BUILD)
+target_link_libraries(wrapper PUBLIC
+  pybind11::module
+)
+endif(WINDOWS_BUILD)
+
 #---- Translate PDDL ----#
-pybind11_add_module(pddl SHARED)
-# add_library(pddl SHARED)
+# pybind11_add_module(pddl SHARED)
+add_library(pddl SHARED)
 set_target_properties(pddl PROPERTIES
   PREFIX ""
   INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
@@ -342,8 +348,8 @@ target_link_libraries(pddl PRIVATE
 # )
 
 #---- Planner ----#
-pybind11_add_module(planner SHARED)
-# add_library(planner SHARED)
+# pybind11_add_module(planner SHARED)
+add_library(planner SHARED)
 set_target_properties(planner PROPERTIES
   PREFIX ""
   INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:$ORIGIN"
