--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
@@ -115,7 +115,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v3
@@ -213,9 +213,8 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.6"
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
+        
 
     steps:
     - uses: actions/checkout@v3
@@ -300,7 +299,7 @@ jobs:
   #   runs-on: macos-12
   #   strategy:
   #     matrix:
-  #       # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  #       # py_version: ["3.7", "3.8", "3.9", "3.10"]
   #       py_version: ["3.8", "3.9", "3.10"]
   #       # py_version: ["3.9", "3.10"]
   #       exclude:
@@ -400,7 +399,7 @@ jobs:
   #   runs-on: macos-11
   #   strategy:
   #     matrix:
-  #       # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  #       # py_version: ["3.7", "3.8", "3.9", "3.10"]
   #       py_version: ["3.9", "3.10"]
   #       # exclude:
   #       #   - py_version: "3.8"
@@ -500,7 +499,7 @@ jobs:
 #     runs-on: macos-11
 #     strategy:
 #       matrix:
-#         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         # py_version: ["3.7", "3.8", "3.9", "3.10"]
 #         py_version: ["3.8", "3.9", "3.10"]
 #         # py_version: ["3.9", "3.10"]
 #         exclude:
@@ -600,7 +599,7 @@ jobs:
 #     runs-on: macos-10.15
 #     strategy:
 #       matrix:
-#         # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         # py_version: ["3.7", "3.8", "3.9", "3.10"]
 #         py_version: ["3.8", "3.9", "3.10"]
 #         # py_version: ["3.9", "3.10"]
 #         exclude:
