--- a/.github/workflows/testpypi_publish.yml
+++ b/.github/workflows/testpypi_publish.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
         # py_version: ["3.8", "3.9", "3.10"]
 
     steps:
@@ -118,7 +118,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
         # py_version: ["3.8", "3.9", "3.10"]
 
     steps:
@@ -213,10 +213,9 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
         # py_version: ["3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.6"
+        
 
     steps:
     - uses: actions/checkout@v3
@@ -300,7 +299,7 @@ jobs:
 #     runs-on: macos-11
 #     strategy:
 #       matrix:
-#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         py_version: ["3.7", "3.8", "3.9", "3.10"]
 
 
 #     steps:
@@ -399,7 +398,7 @@ jobs:
   #   runs-on: macos-12
   #   strategy:
   #     matrix:
-  #       # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  #       # py_version: ["3.7", "3.8", "3.9", "3.10"]
   #       py_version: ["3.8", "3.9", "3.10"]
   #       exclude:
   #         - py_version: "3.9"
@@ -494,7 +493,7 @@ jobs:
   #   runs-on: macos-11
   #   strategy:
   #     matrix:
-  #       # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  #       # py_version: ["3.7", "3.8", "3.9", "3.10"]
   #       py_version: ["3.8", "3.9", "3.10"]
   #       exclude:
   #         - py_version: "3.9"
@@ -588,7 +587,7 @@ jobs:
   #   runs-on: macos-10.15
   #   strategy:
   #     matrix:
-  #       # py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+  #       # py_version: ["3.7", "3.8", "3.9", "3.10"]
   #       py_version: ["3.8", "3.9", "3.10"]
   #       exclude:
   #         - py_version: "3.9"
