--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -119,7 +119,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -213,9 +213,8 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.6"
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
+        
 
     steps:
     - uses: actions/checkout@v2
@@ -299,7 +298,7 @@ jobs:
 #     runs-on: macos-11
 #     strategy:
 #       matrix:
-#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         py_version: ["3.7", "3.8", "3.9", "3.10"]
 
 
 #     steps:
@@ -396,7 +395,7 @@ jobs:
 #     runs-on: macos-11
 #     strategy:
 #       matrix:
-#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         py_version: ["3.7", "3.8", "3.9", "3.10"]
 
 
 #     steps:
@@ -492,7 +491,7 @@ jobs:
 #     runs-on: macos-10.15
 #     strategy:
 #       matrix:
-#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         py_version: ["3.7", "3.8", "3.9", "3.10"]
 
 #     steps:
 #     - uses: actions/checkout@v2
