--- a/.github/workflows/test_testpypi_package.yml
+++ b/.github/workflows/test_testpypi_package.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -67,7 +67,7 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -102,9 +102,8 @@ jobs:
     runs-on: windows-2019
     strategy:
       matrix:
-        py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
-        exclude:
-          - py_version: "3.6"
+        py_version: ["3.7", "3.8", "3.9", "3.10"]
+        
 
     steps:
     - uses: actions/checkout@v2
@@ -139,7 +138,7 @@ jobs:
 #     runs-on: macos-latest
 #     strategy:
 #       matrix:
-#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         py_version: ["3.7", "3.8", "3.9", "3.10"]
 #         # exclude:
 #         #   - py_version: "3.8"
 
@@ -177,7 +176,7 @@ jobs:
 #     runs-on: macos-10.15
 #     strategy:
 #       matrix:
-#         py_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+#         py_version: ["3.7", "3.8", "3.9", "3.10"]
 #         # exclude:
 #         #   - py_version: "3.8"
 
